# mja

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.zh-CN.md  RELEASE_NOTES_v1.0.md  TEST_MATRIX.md  install.sh  pyproject.toml  uninstall.sh
mja/: __init__.py  cli.py  doctor.py  errors.py  install.py  list_cmd.py  models.py  remove.py  repair.py  runtime.py  search.py  state.py  state_rebuild.py  update_cmd.py
mja/gui/: app.py
mja/resources/: mja-gui.desktop
tests/: test_gui_entry.py  test_improvements.py  test_packaging.py  test_smoke.py  test_version_and_metadata.py
